<resources>
    <string name="app_name">Nuclear Wheels</string>
    <string name="app_name_version">Ver. 1.30</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="header_one">VEHICLE \n SERVICING </string>
    <string name="header_two">VEHICLE \n INSURANCE</string>

    <string name="header_buy">BUY \n VEHICLE</string>
    <string name="header_cell">SELL \n VEHICLE</string>
    <string name="header_accessories">VEHICLE \n ACCESSORIES</string>
    <string name="header_login">LOGIN OR\n REGISTER</string>
    <string name="header_text">Select Vehicle ( Car/Bike)</string>

    <string-array name="profile">
        <item>Home</item>
        <item>My Profile</item>
        <item>Service History</item>
        <item>setting</item>
    </string-array>
    <string-array name="byke_brands">
        <item>--Select Brand--</item>
        <item>TVS</item>
        <item>Ducati</item>
        <item>DSK</item>
        <item>vespa</item>
        <item>Hero</item>
        <item>Suzuki</item>
        <item>Harley Davidson</item>
        <item>Kawasaki</item>
        <item>Yamaha</item>
        <item>BMW</item>
        <item>KTM</item>
        <item>Royal Enfield</item>
        <item>Mahandra</item>
        <item>Bajaj</item>
        <item>Honda</item>
    </string-array>
    <string-array name="car_brands">
        <item>--Select Brand--</item>
        <item>Tata</item>
        <item>Maruti Suzuki</item>
        <item>Mahindra</item>
        <item>Honda</item>
        <item>Ford</item>
        <item>Hyundai</item>
        <item>Fiat</item>
        <item>Skoda</item>
        <item>Toyota</item>
        <item>Audi</item>
        <item>BMW</item>
        <item>Chevrolet</item>
        <item>Renault</item>
        <item>Opel</item>
        <item>Nissan</item>
        <item>Mitsubishi</item>
        <item>Porsche</item>
        <item>Hyundai</item>
        <item>Mazda</item>
        <item>Mercedes Benz</item>
        <item>Land Rover</item>
        <item>Volkswagen</item>
        <item>Volvo</item>
        <item></item>
    </string-array>
    <string-array name="fuel">
        <item>-Select Fuel Type-</item>
        <item>-ALL-</item>
        <item>Petrol</item>
        <item>Desel</item>
        <item>CNG</item>
    </string-array>
    <string-array name="vehicle_price">
        <item>-Select Price-</item>
        <item>-ALL-</item>
        <item>50000 animation_right</item>
        <item>50000-1 Lakh</item>
        <item>1 Lakh-2 Lakh</item>
        <item>2 Lakh-3 Lakh</item>
        <item>3 Lakh-4 Lakh</item>
        <item>Above 5 Lakh</item>
    </string-array>
    <string-array name="spOwnerPrioraty">
        <item>-Select Owner Type-</item>
        <item>1st Owner</item>
        <item>2st owner</item>
        <item>3st owner</item>
        <item>4st owner</item>
    </string-array>
    <string-array name="insurance_status">
        <item>--Insurance Status--</item>
        <item>Insurance Available</item>
        <item>Insurance Expire</item>
    </string-array>
    <string-array name="city_name">
        <item>Pune</item>
        <item>Mumbai</item>
        <item>Bangalore</item>
        <item>Nagpur</item>
        <item>Aurangabad</item>
        <item>Kolhapur</item>
        <item>Ahmednagar</item>
        <item>Mysore</item>
        <item>Mangalore</item>
        <item>Hubli-Dharwar</item>
        <item>Belgaum</item>
        <item>Gulbarga</item>
        <item>Bagalkot</item>
        <item>Gangawati</item>
        <item>Chikmagalur</item>
        <item>Mandya</item>
        <item>Kolar</item>
        <item>Chitradurga</item>
        <item>Bhadravati</item>
        <item>Robertson Pe</item>t
        <item>Udupi</item>
        <item>Noida</item>
        <item>Gadag-Betigeri</item>
        <item>Hassan</item>
        <item>Hospet</item>
    </string-array>
    <string-array name="MODEL_YEAR">
        <item>--select Year of model --</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
    </string-array>

    <string name="app_id">656943827789668</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="data_not_found">Search result not found, you may select  another  vehicle brand and search for better result or tap the refresh button</string>
    <string name="data_not_found_for_accessories">Search result not found, you may select  another Item from slide menu and search for better result or tap the refresh button.</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="user_not_found">Email does not exist, please register as a new user if allready registered please enter correct email id</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_vehicle_filter">VehicleFilter</string>
    <!--TODO  for activity_insyrance polocy-->
    <string name="Im_title">Insurance Policy Details</string>
    <string name="insurance_policy_details">Insurance Policy Details</string>
</resources>
