<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/mainbackground"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/lin_buy_cell_id"
                        android:baselineAligned="false">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:layout_marginLeft="30sp"
                            android:layout_marginRight="30sp"
                            android:weightSum="1">

                            <Button
                                android:layout_width="0sp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:drawableTop="@drawable/servicingthreetwo"
                                android:id="@+id/btn_in_serciving_id"
                                android:elevation="0dp"
                                android:text="@string/header_one"
                                android:gravity="center|bottom"
                                android:textColor="#999999"
                                android:textSize="10sp"
                                style="@style/bnt_mainact_all_in_one"
                                android:paddingBottom="7sp"
                                android:layout_marginRight="30sp"/>

                            <Button
                                android:layout_width="0sp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:drawableTop="@drawable/insurancethree_two"
                                style="@style/bnt_mainact_all_in_one"
                                android:id="@+id/btn_insurance_id"
                                android:layout_marginLeft="30sp"
                                android:text="@string/header_two"
                                android:gravity="center|bottom"
                                android:textColor="#999999"
                                android:textSize="10sp"
                                android:paddingBottom="7sp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:layout_marginLeft="30sp"
                            android:layout_marginRight="30sp"
                            android:weightSum="1"
                            android:layout_marginTop="10sp">

                            <Button
                                android:layout_width="0sp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:id="@+id/btn__by_id"
                                android:drawableTop="@drawable/buy"
                                android:text="@string/header_buy"
                                android:gravity="center|bottom"
                                android:textColor="#999999"
                                android:textSize="10sp"
                                android:paddingBottom="7sp"
                                android:layout_marginRight="30sp"
                                style="@style/bnt_mainact_all_in_one"/>

                            <Button
                                android:layout_width="0sp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:id="@+id/btn_sell_id"
                                android:drawableTop="@drawable/sellthree_two"
                                style="@style/bnt_mainact_all_in_one"
                                android:text="@string/header_cell"
                                android:layout_marginLeft="30sp"
                                android:gravity="center|bottom"
                                android:textColor="#999999"
                                android:textSize="10sp"
                                android:paddingBottom="7sp"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:layout_marginLeft="30sp"
                            android:layout_marginRight="30sp"
                            android:weightSum="1"
                            android:layout_marginTop="10sp">

                            <Button
                                android:layout_width="0sp"
                                android:layout_gravity="center"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:drawableTop="@drawable/accessoriesthree_two"
                                android:id="@+id/btn_ACCESSORIES_id"
                                android:layout_marginRight="30sp"
                                android:text="@string/header_accessories"
                                android:gravity="center|bottom"
                                android:textColor="#999999"
                                android:textSize="10sp"
                                android:padding="10sp"
                                style="@style/bnt_mainact_all_in_one"/>

                            <Button
                                android:layout_width="0sp"
                                android:layout_gravity="center"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:text="@string/header_login"
                                android:drawableTop="@drawable/userthree_two"
                                android:id="@+id/btn_LOGINMAIN_id"
                                android:layout_marginLeft="30sp"
                                android:gravity="center|bottom"
                                android:textColor="#999999"
                                android:textSize="10sp"
                                android:padding="10sp"
                                style="@style/bnt_mainact_all_in_one"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.6"
                    android:orientation="vertical"
                    android:weightSum="1"
                    android:id="@+id/lin_bmenu_id"
                    android:visibility="visible">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="SELECT YOUR VEHICLE"
                            android:gravity="center"
                            android:visibility="gone"
                            android:id="@+id/tv_msg_id"
                            android:paddingTop="100sp"
                            android:textColor="#000000"
                            android:layout_marginTop="0sp"
                            />


                    </LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.8"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:id="@+id/lin_baack_id"
        android:background="@drawable/bthree">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/img_bike_id"
                android:padding="12sp"
                android:src="@drawable/bike"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/car"
                android:id="@+id/img_car_id"
                android:padding="10sp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
